--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -54,7 +54,7 @@
         "model = LogisticRegression()\n",
         "model.fit(X_train, Y_train)\n",
         "# save the model to disk\n",
-        "filename = 'finalized_model.sav'\n",
+        "filename = 'work/workspace/demo/finalized_model.sav'\n",
         "pickle.dump(model, open(filename, 'wb'))"
       ],
       "execution_count": 99,
