--- a/predict_model.ipynb
+++ b/predict_model.ipynb
@@ -35,6 +35,7 @@
         "colab": {}
       },
       "source": [
+        "filename = 'work/workspace/demo/finalized_model.sav'",
         "loaded_model = pickle.load(open(filename, 'rb'))\n",
         "dataframe = pandas.read_csv(\"pima-indians-diabetes.data.csv\",names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class'])\n",
         "\n",
