--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -53,7 +53,7 @@
         "# Fit the model on training set\n",
         "model = LogisticRegression()\n",
         "model.fit(X_train, Y_train)\n",
-        "print('Training.....)",
+        "print('Training.....')",
         "# save the model to disk\n",
         "filename = 'work/workspace/demo/finalized_model.sav'\n",
         "pickle.dump(model, open(filename, 'wb'))",
