--- a/predict_model.ipynb
+++ b/predict_model.ipynb
@@ -22,6 +22,7 @@
       "source": [
         "# Save Model Using Pickle\n",
         "import pandas\n",
+        "from sklearn import model_selection\n",
         "import pickle"
       ],
       "execution_count": 1,
