--- a/predict_model.ipynb
+++ b/predict_model.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "filename = 'finalized_model.sav'",
         "loaded_model = pickle.load(open(filename, 'rb'))\n",
-        "dataframe = pandas.read_csv(\"work/workspace/demo_pipeline/pima-indians-diabetes.data.csv\",names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class'])\n",
+        "dataframe = pandas.read_csv(\"pima-indians-diabetes.data.csv\",names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class'])\n",
         "\n",
         "array = dataframe.values\n",
         "X = array[:,0:8]\n",
