Fix syntax in notebooks (missing break line)

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -1,81 +1,108 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "train_model.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "255iQRDYI-c9"
+   },
+   "outputs": [],
+   "source": [
+    "# Save Model Using Pickle\n",
+    "import pandas\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import pickle"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 180
+    },
+    "colab_type": "code",
+    "id": "LUuOPckyMyeF",
+    "outputId": "cfde13e7-a455-4952-e15a-816043165130"
+   },
+   "outputs": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "255iQRDYI-c9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Save Model Using Pickle\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "import pickle"
-      ],
-      "execution_count": 98,
-      "outputs": []
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training.....\n",
+      "Model saved finalized_model.sav\n"
+     ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LUuOPckyMyeF",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "outputId": "cfde13e7-a455-4952-e15a-816043165130"
-      },
-      "source": [
-        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
-        "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-        "dataframe = pandas.read_csv(url, names=names)\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "test_size = 0.33\n",
-        "seed = 7\n",
-        "X_train, X_test, Y_train, Y_test = model_selection.train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
-        "# Fit the model on training set\n",
-        "model = LogisticRegression()\n",
-        "model.fit(X_train, Y_train)\n",
-        "print('Training.....')",
-        "# save the model to disk\n",
-        "filename = 'finalized_model.sav'\n",
-        "pickle.dump(model, open(filename, 'wb'))",
-        "print('Model saved ' + filename)"
-      ],
-      "execution_count": 99,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kinow/Development/java/jenkins/simple-ml-pipeline-tutorial/venv/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
+    "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
+    "dataframe = pandas.read_csv(url, names=names)\n",
+    "array = dataframe.values\n",
+    "X = array[:,0:8]\n",
+    "Y = array[:,8]\n",
+    "test_size = 0.33\n",
+    "seed = 7\n",
+    "X_train, X_test, Y_train, Y_test = model_selection.train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "# Fit the model on training set\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, Y_train)\n",
+    "print('Training.....')# save the model to disk\n",
+    "filename = 'finalized_model.sav'\n",
+    "pickle.dump(model, open(filename, 'wb'))\n",
+    "print('Model saved ' + filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "train_model.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
