--- a/predict_model.ipynb
+++ b/predict_model.ipynb
@@ -1,56 +1,84 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "predict_model.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "255iQRDYI-c9"
+   },
+   "outputs": [],
+   "source": [
+    "# Save Model Using Pickle\n",
+    "import pandas\n",
+    "from sklearn import model_selection\n",
+    "import pickle"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "eePRybLyKEmL"
+   },
+   "outputs": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "255iQRDYI-c9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Save Model Using Pickle\n",
-        "import pandas\n",
-        "from sklearn import model_selection\n",
-        "import pickle"
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eePRybLyKEmL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "filename = 'finalized_model.sav'",
-        "loaded_model = pickle.load(open(filename, 'rb'))\n",
-        "dataframe = pandas.read_csv(\"pima-indians-diabetes.data.csv\",names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class'])\n",
-        "\n",
-        "array = dataframe.values\n",
-        "X = array[:,0:8]\n",
-        "Y = array[:,8]\n",
-        "test_size = 0.1\n",
-        "seed = 7\n",
-        "X_train, X_test, Y_train, Y_test = model_selection.train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
-        "result = loaded_model.score(X_test, Y_test)\n",
-        "print(result)"
-      ],
-      "execution_count": null,
-      "outputs": []
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8571428571428571\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "filename = 'finalized_model.sav'\n",
+    "loaded_model = pickle.load(open(filename, 'rb'))\n",
+    "dataframe = pandas.read_csv(\"pima-indians-diabetes.data.csv\",names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class'])\n",
+    "\n",
+    "array = dataframe.values\n",
+    "X = array[:,0:8]\n",
+    "Y = array[:,8]\n",
+    "test_size = 0.1\n",
+    "seed = 7\n",
+    "X_train, X_test, Y_train, Y_test = model_selection.train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "result = loaded_model.score(X_test, Y_test)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "predict_model.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
